[gd_scene load_steps=11 format=2]

[ext_resource path="res://Code/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Sound/Background music/GameOver/ghost-go.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/Background music/GameOver/ghost-go2.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/Background music/GameOver/ghost-go3.wav" type="AudioStream" id=4]




[sub_resource type="DynamicFontData" id=1]

font_path = "res://Pacifico.ttf"
_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=2]

size = 120
use_mipmaps = false
use_filter = false
extra_spacing_space = 50
font_data = SubResource( 1 )
_sections_unfolded = [ "Extra Spacing", "Font" ]

[sub_resource type="DynamicFontData" id=3]

font_path = "res://Pacifico.ttf"

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

font_path = "res://Pacifico.ttf"

[sub_resource type="DynamicFont" id=6]

size = 80
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOver" type="Node"]

editor/display_folded = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1082.0
margin_bottom = 364.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Restart" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_top = 322.0
margin_right = 680.0
margin_bottom = 478.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Quit" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_top = 479.0
margin_right = 680.0
margin_bottom = 635.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Audio1" type="AudioStreamPlayer2D" parent="." index="3"]

position = Vector2( 6.18176, 6.18175 )
stream = ExtResource( 2 )
volume_db = 8.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Audio2" type="AudioStreamPlayer2D" parent="." index="4"]

position = Vector2( 6.18176, 6.18175 )
stream = ExtResource( 3 )
volume_db = 8.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Audio3" type="AudioStreamPlayer2D" parent="." index="5"]

position = Vector2( 6.18176, 6.18175 )
stream = ExtResource( 4 )
volume_db = 8.0
autoplay = false
max_distance = 1500.0
attenuation = 1.62451
bus = "Master"
area_mask = 1

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]


